--- a/WebApp2Prosjekt/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WebApp2Prosjekt/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,8 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+
+            <!--TODO: Add role selection-->
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
