--- a/WebApp2Prosjekt/Views/Client/SubmitTask.cshtml
+++ b/WebApp2Prosjekt/Views/Client/SubmitTask.cshtml
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DeveloperId" class="control-label"></label>
-                <select asp-for="DeveloperId" asp-items="@(new SelectList(Model.Developers, "SpecialityFieldId", "UserName"))" class="form-control">
+                <select asp-for="DeveloperId" asp-items="@(new SelectList(Model.Developers, "DeveloperId", "UserName"))" class="form-control">
                     <option>---Please select one---</option>
                 </select>
                 <span asp-validation-for="DeveloperId" class="text-danger"></span>
