--- a/WebApp2Prosjekt/Areas/Identity/Pages/Account/Register.cshtml
+++ b/WebApp2Prosjekt/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,8 +27,14 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-
-            <!--TODO: Add role selection-->
+            <div class="form-group">
+                <label asp-for="Input.Role"></label>
+                <select asp-for="Input.Role" class="form-control">
+                    <option>Client</option>
+                    <option>Freelancer</option>
+                </select>
+                <span asp-validation-for="Input.Role" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
