Added links in adminindex

--- a/WebApp2Prosjekt/Views/Home/AdminIndex.cshtml
+++ b/WebApp2Prosjekt/Views/Home/AdminIndex.cshtml
@@ -6,3 +6,10 @@
 
 <h2>AdminIndex</h2>
 
+<p>
+    <ul>
+        <li>@Html.ActionLink("Be a client", "Index", "Client")</li>
+        <li>@Html.ActionLink("Be a developer", "Index", "Developer")</li>
+        <li>@Html.ActionLink("Be a freelancer", "Index", "Freelancer")</li>
+    </ul>
+</p>
