--- a/WebApp2Prosjekt/Views/Client/SubmitTask.cshtml
+++ b/WebApp2Prosjekt/Views/Client/SubmitTask.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="SpecialityFieldId" class="control-label"></label>
-                <select asp-for="SpecialityFieldId" asp-items="@(new SelectList(Model.SpecialityFields, "SpecialityFieldId", "name"))" class="form-control">
+                <select asp-for="SpecialityFieldId" asp-items="@(new SelectList(Model.SpecialityFields, "SpecialityFieldId", "Type"))" class="form-control">
                     <option>---Please select one---</option>
                 </select>
                 <span asp-validation-for="SpecialityFieldId" class="text-danger"></span>
