view for payment

--- a/WebApp2Prosjekt/Views/Client/PayForTask.cshtml
+++ b/WebApp2Prosjekt/Views/Client/PayForTask.cshtml
@@ -29,6 +29,9 @@
                 @Html.DisplayNameFor(model => model.Complete)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Paid)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Lines)
             </th>
             <th></th>
@@ -51,6 +54,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Complete)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Paid)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Lines)
