--- a/WebApp2Prosjekt/Views/Client/Index.cshtml
+++ b/WebApp2Prosjekt/Views/Client/Index.cshtml
@@ -10,6 +10,7 @@
 <p>
     <ul>
         <li>@Html.ActionLink("Create a new Task", "SubmitTask")</li>
+        <li>@Html.ActionLink("Pay for tasks", "PayForTask")</li>
     </ul>
 </p>
 <table class="table">
