--- a/WebApp2Prosjekt/Views/Client/Index.cshtml
+++ b/WebApp2Prosjekt/Views/Client/Index.cshtml
@@ -26,6 +26,9 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Freelancer)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.SpecialityFieldId)
             </th>
             <th>
@@ -48,6 +51,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Freelancer.UserName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SpecialityFieldId)
