--- a/WebApp2Prosjekt/Views/Client/SubmitTask.cshtml
+++ b/WebApp2Prosjekt/Views/Client/SubmitTask.cshtml
@@ -23,19 +23,19 @@
                 <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+            <!---Generates wierdly-->
             <div class="form-group">
                 <label asp-for="SpecialityFieldId" class="control-label"></label>
                 <select asp-for="SpecialityFieldId" asp-items="@(new SelectList(Model.SpecialityFields, "SpecialityFieldId", "Type"))" class="form-control">
-                    <option>---Please select one---</option>
+                    <option value="0">---Please select one---</option>
                 </select>
-                <span asp-validation-for="SpecialityFieldId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DeveloperId" class="control-label"></label>
+                <p>Må velges, bug med specialty field som genereres annerledes for en hittil  ukjent grunn</p>
                 <select asp-for="DeveloperId" asp-items="@(new SelectList(Model.Developers, "Id", "UserName"))" class="form-control">
-                    <option>---Please select one---</option>
+                    <option value="">---Please select one---</option>
                 </select>
-                <span asp-validation-for="DeveloperId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
